Bug 63866 - UI: useless checkbox 'hide group separator' in toolbar
Summary: UI: useless checkbox 'hide group separator' in toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0
Keywords: difficultyBeginner, needsDevEval, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2013-04-24 08:49 UTC by marco panichi
Modified: 2015-12-15 12:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description marco panichi 2013-04-24 08:49:19 UTC
Problem description: 

Steps to reproduce:
1. right mouse click on a tool bar
2. "Customize Toolbar..."
3. uncheck some separators (---------------)
4. click "Ok"

Current behavior:
The separators remain

Expected behavior:
The separator unchecked will disappear
              
Operating System: Windows 7
Version: 4.0.2.2 release
Comment 1 Rainer Bielefeld Retired 2013-04-24 10:27:08 UTC
[Reproducible] with Server Installation of "LibreOffice 3.3.3  English UI/ German Locale [OOO330m19 (Build:301) tag libreoffice-3.3.3.1] on German WIN7 Home Premium (64bit):

1. Launch Writer (or any application)
2. 'Standard Toolbar -> Rightclick -> Customize Toolbar'
    > Dialog appears, under 'Toolbar Content' all icons and group separators are
      listed
3. Uncheck one visible icon
   > Becomes invisible immediately
4. Check again
5. Uncheck a group separator
   > Stays visible                !!!
6. <OK>
   > Stays visible                !!!
7. Redo step 2
   > Checkmark has reappeared at separator.

General problem, not only Writer affected.

This is a very old bug already introduced with the new UI design in OOo 2, where the useless checkbox appeared. In OOo 1 the separators did not have "visibl" checkboxes in that dialog.

So this one is inherited from OOo (but I can't find an issue there)

Still  [Reproducible] with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 0b4315077a6827798e1d2bdae73298365ba9a01) TinderBox: Win-x86@6, Branch:master, Pull Time:  2013-04-18_04:00:51" ENGLISH UI / German Locale on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile.

Looks like an EasyHack
Comment 2 Rainer Bielefeld Retired 2013-04-24 10:32:07 UTC
I also checked LibO 3.5.7.2 On Ubuntu 12 (Virtualbox), as expected also affected.

@marco panichi:
Thank your for your attention!
Comment 3 Rainer Bielefeld Retired 2013-04-24 10:44:42 UTC
I forgot to mention, I think the checkbox should be removed simply, I don't see any sense in making the separator invisible. And if a user wants to get rid of a separator, he can delete it.
Comment 4 Efe Gürkan YALAMAN 2013-05-21 15:33:26 UTC
Hi I tried to debug and solve that issue. Problem might be related to svtools rather than dialog page code. 

Seperators returns false to isBinding(). You will see in the code.

If you want to play on this, there are some code pointers: 

cfg.cxx file
http://cgit.freedesktop.org/libreoffice/core/tree/cui/source/customize/cfg.cxx#n4800

.hxx
http://cgit.freedesktop.org/libreoffice/core/tree/cui/source/inc/cfg.hxx



If you find this is relative to treelistbox you should check /svtools too.
Comment 5 Commit Notification 2013-06-07 07:47:33 UTC
Jason Hulme committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ac87296c3f5f67d34336bf1eb75d1a6cc81e1c7

fdo#63866 Hid useless checkboxes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jorendc 2013-08-03 14:19:44 UTC
Looks fixed to me, except the fact you can't add one anymore (after deleting it). Except to reset the toolbars to the default settings. Is that correct, or did I miss something?

Kind regards,
Joren
Comment 7 Jason Hulme 2013-09-16 04:15:33 UTC
You can add new separators by opening up the customize toolbar screen and clicking on Modify -> Add Group. However, I now realize this adds a non clickable check box entry, at least until the customize toolbar screen is reloaded.
Comment 8 Commit Notification 2013-10-09 14:09:59 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb1c2d1482d9eae7665d82fc7560ca1b75707da2

fdo#63866 Remove checkbox also for new separators



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Samuel Mehrbrodt 2013-10-09 17:09:17 UTC
The remaining issue is now also resolved.
Comment 10 Robinson Tryon (qubit) 2015-12-15 12:14:24 UTC
Migrating Whiteboard tags to Keywords: (ProposedEasyHack -> needsDevEval, DifficultyBeginner SkillCpp TopicUI )
[NinjaEdit]