fdo#63866 Hid useless checkboxes

Added functions to SvTreeListBox and SvLBoxButton to allow entries with hidden checkboxes

Change-Id: Ia5a1deabea6c01aad5e4010612ac453c669258a6
Reviewed-on: https://gerrit.libreoffice.org/4169
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>